# armv7-simulator

./: CMakeLists.txt  armv7_simulator_arch.excalidraw  decoder.cpp  decoder.h  forum_post.md  teste.img  tipos.h
include/: cpu.hpp  decoder.hpp  executer.hpp  memoria.h  memoria.hpp
src/: cpu.cpp  decoder.cpp  executer.cpp  main.cpp  memory.cpp
